Primeiro push do projeto Fluxo_Caixa com Docker e MongoDB

--- a/Fluxo_Caixa.csproj
+++ b/Fluxo_Caixa.csproj
@@ -6,10 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
-    <OutputType>Exe</OutputType> <!-- 🔥 ESSA LINHA AQUI FAZ DIFERENÇA -->
+    <OutputType>Exe</OutputType> 
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
