--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "MongoDb": "mongodb+srv://rafagoretti:Valid_2022@cluster0.btulkqw.mongodb.net/FluxoCaixaDb?retryWrites=true&w=majority&appName=Cluster0"
+  }
 }
